# Generated by Django 6.0.1 on 2026-02-27 11:24

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('fitness_analysis', '0002_repetition_error_repetition_score_delete_errorscore'),
    ]

    operations = [
        migrations.SeparateDatabaseAndState(
            database_operations=[
                # 1. 重新命名 table
                migrations.RunSQL(
                    sql="RENAME TABLE recommended_video_recordings TO recording_recommendations;",
                    reverse_sql="RENAME TABLE recording_recommendations TO recommended_video_recordings;"
                ),
                # 2. 重新命名欄位 (recommendedvideo_id -> video_id)
                migrations.RunSQL(
                    sql="ALTER TABLE recording_recommendations CHANGE COLUMN recommendedvideo_id video_id bigint;",
                    reverse_sql="ALTER TABLE recording_recommendations CHANGE COLUMN video_id recommendedvideo_id bigint;"
                ),
            ],
            state_operations=[
                # 告訴 Django 模型狀態已改變
                migrations.CreateModel(
                    name='RecordingRecommendation',
                    fields=[
                        ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                        ('recording', models.ForeignKey(db_column='recording_id', on_delete=django.db.models.deletion.CASCADE, to='fitness_analysis.recording')),
                        ('video', models.ForeignKey(db_column='video_id', on_delete=django.db.models.deletion.CASCADE, to='fitness_analysis.recommendedvideo')),
                    ],
                    options={
                        'db_table': 'recording_recommendations',
                        'unique_together': {('recording', 'video')},
                    },
                ),
                migrations.AlterField(
                    model_name='recommendedvideo',
                    name='recordings',
                    field=models.ManyToManyField(blank=True, related_name='recommended_videos', through='fitness_analysis.RecordingRecommendation', to='fitness_analysis.recording'),
                ),
            ]
        ),
    ]
