Table users {
  id integer [primary key]
  username varchar
  password varchar
  created_at timestamp
}

Table recordings {
  id integer [primary key]
  user_id integer [not null]
  sport ENUM('Deadlift', 'Benchpress', 'Squat')
  folder varchar
  total_frames integer
  training_suggestion varchar
  workout_plan varchar
  created_at timestamp
}

Table repetitions {
  id integer [primary key]
  recording_id integer [not null]
  start_frame integer
  end_frame integer
}

Table error_score {
  id integer [primary key]
  rep_id integer [not null]
  error varchar
  score float
}

Table recommended_video {
  id integer [primary key]
  title varchar
  video_url varchar
  target_error varchar
}

Table recording_recommendations {
  recording_id integer [not null]
  video_id integer [not null]
  primary key (recording_id, video_id)
}

// --- Relationships ---

Ref: recordings.user_id > users.id
Ref: repetitions.recording_id > recordings.id
Ref: error_score.rep_id > repetitions.id
Ref: recording_recommendations.recording_id > recordings.id
Ref: recording_recommendations.video_id > recommended_video.id